--- a/brand/varihpoe/202006_marketing_report.html
+++ b/brand/varihpoe/202006_marketing_report.html
@@ -323,7 +323,30 @@ function drawVisualization(){
 		<!--h1 class="ui left aligned header">VARIL:HOPE 6월</h1-->
 		<!--h3 class="ui left aligned header">6월 Marketing Report</h3-->
 		<!--div class="ui divider"></div-->
-		
+		<h3  class="ui left aligned header">월간진행수량</h3>
+		<div class="ui grid">
+			<div class="sixteen wide column">
+				<table class="ui very compact celled table">
+	<thead>
+	<tr><th style='width:18%;'>목록</th><th style='width:26%;'>세부사항</th><th style='width:8%;'>6월</th><th style='width:8%;'>7월</th><th style='width:8%;'>8월</th><th style='width:8%;'>9월</th><th style='width:8%;'>10월</th><th style='width:8%;'>11월</th><th style='width:8%;'>12월</th></tr>
+
+	<tbody>
+	<tr><td style='font-size:11px;'>컨텐츠 (이미지) : 본사 미러링</td><td style='font-size:11px;'>Facebook , Instagram</td><td style='font-size:11px;'>27</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>컨텐츠 (영상) : 본사 미러링 - 번역</td><td style='font-size:11px;'>Facebook , Instagram</td><td style='font-size:11px;'>2</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>컨텐츠 (이미지) : 비나피엘 제작</td><td style='font-size:11px;'>Facebook , Instagram</td><td style='font-size:11px;'>28</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>컨텐츠 (영상) : 비나피엘 제작</td><td style='font-size:11px;'>Facebook , Instagram</td><td style='font-size:11px;'>6</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>SEO</td><td style='font-size:11px;'>Google , Review wed page, Homepage</td><td style='font-size:11px;'>4</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>리뷰</td><td style='font-size:11px;'>fimi ,Facebook beauty review web page</td><td style='font-size:11px;'>14</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>체험단 이벤트</td><td style='font-size:11px;'>Facebook event , Facebook mini game</td><td style='font-size:11px;'>2</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>뷰티유투버</td><td style='font-size:11px;'>beauty youtuber</td><td style='font-size:11px;'>6</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>인플루언서</td><td style='font-size:11px;'>Influencer</td><td style='font-size:11px;'>0</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>언론사</td><td style='font-size:11px;'>News paper</td><td style='font-size:11px;'>3</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+<tr><td style='font-size:11px;'>영상제작</td><td style='font-size:11px;'>Video clip</td><td style='font-size:11px;'>2</td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td><td style='font-size:11px;'></td></tr>
+	
+	</tbody>
+</table>
+			</div>
+		</div>
 		<h3  class="ui left aligned header">6월 ISSUE</h3>
 				<h4 class="ui left aligned header">동향</h4>
 		<div class="ui grid">
